# SearXng_MCP

./: .env.example  .gitattributes  .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CHAT_INTERFACE.md  CHAT_INTERFACE_SPEC.md  CI_FIXES_COMPLETE.md  CI_FIX_SUMMARY.md  COMPREHENSIVE_SUMMARY.md  CONTRIBUTING.md  COVE_ANALYSIS.md  COVE_ANALYSIS_FINAL.md  COVE_ANALYSIS_V2.md  COVE_ANALYSIS_V3.md  COVE_ANALYSIS_V4.md  COVE_COMPLETION_SUMMARY.txt  COVE_SUMMARY.md  DASHBOARD.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  JOURNEY_TO_100.md  MCP_AGENT_GUIDE.md  PART2_INTEGRATION_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY_FINAL.md  QUICKSTART.md  README.md  RELEASE_v0.3.0.md  RLM_REPL_COMPLETE.md  RLM_REPL_GUIDE.md  SECURITY.md  SECURITY_GITIGNORE_REPORT.md  STATUS_V0.2.0.md  TASK_COMPLETE.md  TESTING_REPORT.md  (+16 more)
.github/: PROJECT_DESCRIPTION.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  dependency-updates.yml  mcp-updates.yml  searxng-updates.yml
examples/: advanced_search.py  basic_search.py
src/searxng_mcp/: __init__.py  ai_enhancer.py  cache.py  config.py  context_manager.py  dashboard.py  health.py  metrics.py  rate_limiter.py  repl_manager.py  rtd_manager.py  server.py
src/searxng_mcp/static/: chat.html  dashboard.html
tests/: __init__.py  test_config.py  test_integration.py  test_new_features.py  test_repl_manager.py  test_server.py
